# mp2-lab3-postfix

./: CMakeLists.txt  README.md
gtest/: CMakeLists.txt
include/: list.h  list_stack.h  postfix.h  stack.h
postfix/: postfix.cpp
sample/: sample_list.cpp  sample_postfix.cpp  sample_stack.cpp
sln/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mp2-lab3-postfix.sln  mp2-lab3-postfix.vcxproj
sln/Debug/: gtest.lib  sample.ilk  test_postfix.ilk
sln/for_postfix/: for_postfix.vcxproj  for_postfix.vcxproj.filters
sln/gtest/: cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
sln/gtest/Debug/: CL.read.1.tlog  CL.write.1.tlog  vc100.idb  (+4 more)
sln/mp2-lab3-postfix/: mp2-lab3-postfix.sln
sln/postfix/: postfix.vcxproj  postfix.vcxproj.filters  proba.cpp
sln/sample/: cmake_install.cmake  sample_list.vcxproj  sample_list.vcxproj.filters  sample_postfix.vcxproj  sample_postfix.vcxproj.filters  sample_stack.vcxproj  sample_stack.vcxproj.filters
sln/sample_list/: sample_list.vcxproj  sample_list.vcxproj.filters
sln/sample_postfi/: sample_postfi.vcxproj  sample_postfi.vcxproj.filters
sln/sample_stack/: sample_stack.vcxproj  sample_stack.vcxproj.filters
sln/src/: cmake_install.cmake  mp2-lab3-postfix.vcxproj  mp2-lab3-postfix.vcxproj.filters
sln/test/: cmake_install.cmake  test_mp2-lab3-postfix.vcxproj  test_mp2-lab3-postfix.vcxproj.filters
sln/test_postfix/: test_postfix.vcxproj  test_postfix.vcxproj.filters
src/: postfix.cpp
test/: CMakeLists.txt  test_postfix.cpp
(+137 files in other folders)
